tests/negative/array_bounds.tx
// EXPECTED: RUNTIME_ERROR
// Description: Verify that accessing an out-of-bounds array index causes a runtime error.

let arr: int[] = [1, 2, 3];
print(arr[5]); // Error: Index 5 is out of bounds for size 3
